@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-05T00:59:34Z",
-  "count" : 2,
-  "count_minmax" : [ 0, 2 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 1,
-  "uniques" : 2,
-  "uniques_minmax" : [ 0, 2 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 1
+  "timestamp" : "2022-05-18T16:16:45Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -1, +0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +0 ]
 }
