@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-05-18T00:49:18Z",
+  "timestamp" : "2022-05-18T16:16:45Z",
   "count_outdated" : 267,
   "uniques_outdated" : 133,
   "count" : 308,
@@ -7,10 +7,10 @@
   "clones" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
