@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-05-04T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-05T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
