@@ -1,3 +1,10 @@
+2022-05-18T16:16:45Z:
+* notice: last 14d: unq all: 14 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 133 267 / 160 308
+* notice: next accum: outdated-unq outdated-all / unq all: 133 267 / 160 308
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-04 2022-05-18]
+
 2022-05-18T00:49:18Z:
 * notice: last 14d: all unq: 41 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 267 133 / 307 160
